# yuki_os

./: .gitignore  Cargo.toml  README.md  build.rs  makefile  rust-toolchain.toml  test-binary
kernel/: Cargo.toml
kernel/src/: ata.rs  ata_pio.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  mouse.rs  pagetable.rs  print.rs  scheduler.rs  syscalls.rs
kernel/src/elf/: loader.rs
kernel/src/fs/: ata_wrapper.rs  devfs.rs  error.rs  errors.rs  fat32.rs  fat32ata.rs  fatfs.rs  file.rs  filesystem.rs  framebuffer.rs  initrd.rs  inode.rs  mod.rs  stdio.rs  vfs.rs  vnode.rs
kernel/src/memory/: mod.rs  slab_alloc.rs  user_allocator.rs
kernel/src/process/: mod.rs  vfs.rs
kernel/src/vfs/: file.rs  inode.rs  mod.rs  mount.rs
user-apps/test-binary/: Cargo.toml
user-apps/test-binary/src/: main.rs
user_api/: Cargo.toml
user_api/src/: lib.rs  print.rs  syscalls.rs
user_apps/hello-world/: Cargo.toml
user_apps/hello-world/src/: main.rs
user_apps/test-binary/: Cargo.toml
user_apps/test-binary/src/: main.rs
user_apps/window-manager/: Cargo.toml
user_apps/window-manager/src/: framebuffer.rs  graphics.rs  main.rs  mouse.rs  window.rs  windowmanager.rs  world.rs
user_apps/window-manager/src/event/: mod.rs  mouseevent.rs
