[package]
name = "yuki_os"
version = "0.1.0"
edition = "2021"
default-run = "qemu-bios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["kernel", "user-apps/test-binary"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
test-binary = { path = "user-apps/test-binary", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
fatfs = "0.3"