[package]
name = "yuki_os"
version = "0.1.0"
edition = "2021"
default-run = "qemu-bios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["kernel", "user_api", "user_apps/test-binary", "user_apps/hello-world"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
test-binary = { path = "user_apps/test-binary", artifact = "bin", target = "x86_64-unknown-none" }
hello-world = { path = "user_apps/hello-world", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.5"
fatfs = "0.3"
