[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
name = "yuki_os_lib"
path = "src/lib.rs"

[dependencies]
bootloader_api = "0.11.2"
x86_64 = "0.14.10"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]