[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
name = "yuki_os_lib"
path = "src/lib.rs"

[dependencies]
bootloader_api = "0.11.3"
x86_64 = "0.14.10"
spin = "0.9.8"
pic8259 = "0.10.4"
uart_16550 = "0.2.18"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[unstable]
build-std = ["core", "compiler_builtins", "alloc"]