[package]
name = "test-binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_api = { path = "../../user_api" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
# heapless = "0.8.0"