[package]
name = "window-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_api = { path = "../../user_api" }
embedded-graphics = "0.8.1"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]